--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -24,6 +24,12 @@
 	border: 0;
 }
 
+.sidebar .new-tweet svg {
+	width: 1.5rem;
+	height: 1.5rem;
+	display: none;
+}
+
 .sidebar .new-tweet:hover {
 	filter: brightness(0.9);
 }
@@ -50,4 +56,24 @@
 .main-navigation a svg {
 	width: 2rem;
 	height: 2rem;
+}
+
+@media (max-width: 780px) {
+	.sidebar {
+		padding: 1.5rem 0.75rem;
+		align-items: center;
+	}
+
+	.sidebar .new-tweet svg {
+		display: block;
+	}
+
+	.sidebar .new-tweet span {
+		display: none;
+	}
+
+	.main-navigation a span{
+		display: none;
+	}
+
 }
